[gd_scene load_steps=4 format=3 uid="uid://cjiqhpuc2xotk"]

[ext_resource type="Script" uid="uid://cq4uc17qy6ks" path="res://PaperShredding/paper.gd" id="1_q4ahy"]
[ext_resource type="Texture2D" uid="uid://ubcbym2u3usv" path="res://PaperShredding/document.png" id="1_w17u7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w17u7"]
size = Vector2(186, 231)

[node name="Paper" type="Area2D"]
script = ExtResource("1_q4ahy")

[node name="Document" type="Sprite2D" parent="."]
texture = ExtResource("1_w17u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_w17u7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
